--- a/apps/shadcn-ng/src/index.html
+++ b/apps/shadcn-ng/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>shadcn-ng</title>
+    <title>sng</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <shadcn-ng-root></shadcn-ng-root>
+    <sng-root></sng-root>
   </body>
 </html>
